no, remove that

--- a/jumbotron-narrow.html
+++ b/jumbotron-narrow.html
@@ -109,7 +109,7 @@
         <h1 style="font-family: monospace;">CXIC0114</h1>
         <p class="lead">Run 37</p>
         <p style="font-size: 14px;">This is a demo.</p>
-        <p style="font-size: 14px;">Other Information here. Take advantage of tool tips. Headline info from the elog?</p>
+        <p style="font-size: 14px;">Other Information here. Take advantage of tool tips.</p>
         <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>-->
       </div>
 
