added some example acqiris figures

--- a/jumbotron-narrow.html
+++ b/jumbotron-narrow.html
@@ -184,30 +184,38 @@
 
           <a class="anchor" id="acqiris" ></a>
           <h4>Acqiris</h4>
-          <table class="table table-condensed">
+          <table class="table table-condensed table-hover">
               <THEAD>
-                  <tr><th>EVR Code</th><th>Mean Arrival Time</th><th>RMS</th></tr>
+                  <tr><th>EVR Code</th><th>Mean Arrival Bin</th><th>RMS</th></tr>
               </THEAD>
               <tbody>
-                  <tr><td>183</td><td>56</td><td>3.1</td></tr>
-                  <tr><td>182</td><td>63</td><td>3.0</td></tr>
+                  <tr><td>40</td><td>46.07</td><td>44.45</td></tr>
+                  <tr><td>42</td><td>48.30</td><td>51.65</td></tr>
+                  <tr><td>140</td><td>46.07</td><td>44.45</td></tr>
+                  <tr><td>180</td><td>38.38</td><td>4.54</td></tr>
+                  <tr><td>181</td><td>40.94</td><td>23.94</td></tr>
+                  <tr><td>183</td><td>44.40</td><td>41.20</td></tr>
+                  <tr><td>184</td><td>51.49</td><td>53.31</td></tr>
+                  <tr><td>185</td><td>42.65</td><td>30.11</td></tr>
+                  <tr><td>187</td><td>47.31</td><td>48.22</td></tr>
+                  <tr><td>189</td><td>41.99</td><td>30.35</td></tr>
+                  <tr><td>192</td><td>46.92</td><td>41.90</td></tr>
               </tbody>
           </table>
           <p class="text-center" ><a class="btn btn-sm btn-default" role="button" onclick="toggler('acqirisExtra');">Toggle More Acqiris Info</a></p>
           <div id="acqirisExtra" class="myhidden">
               <div>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
-              <p> Empty.  </p>
+                  <img src="figures/figure_evr_40.png" style="width: 49%;">
+                  <img src="figures/figure_evr_42.png" style="width: 49%;"><br/>
+                  <img src="figures/figure_evr_140.png" style="width: 49%;">
+                  <img src="figures/figure_evr_180.png" style="width: 49%;"><br/>
+                  <img src="figures/figure_evr_181.png" style="width: 49%;">
+                  <img src="figures/figure_evr_183.png" style="width: 49%;"><br/>
+                  <img src="figures/figure_evr_184.png" style="width: 49%;">
+                  <img src="figures/figure_evr_185.png" style="width: 49%;"><br/>
+                  <img src="figures/figure_evr_187.png" style="width: 49%;">
+                  <img src="figures/figure_evr_189.png" style="width: 49%;"><br/>
+                  <img src="figures/figure_evr_192.png" style="width: 49%;">
               </div>
           </div>
 
